@@ -29,7 +29,7 @@
 	CGFloat LFHeight;
 
     BOOL processingTfDone;
-	
+    
 }
 
 @property (nonatomic) BOOL vdlConfigVO;
@@ -47,13 +47,12 @@
 @property (nonatomic,assign) UITextField *activeField;   //just a pointer, no retain
 @property (nonatomic) BOOL processingTfDone;
 
-
 - (void) addVOFields:(NSInteger) vot;
 - (void) addTOFields;
 - (void) removeSVFields;
 
 - (CGRect) configLabel:(NSString *)text frame:(CGRect)frame key:(NSString*)key addsv:(BOOL)addsv;
-- (void) configCheckButton:(CGRect)frame key:(NSString*)key state:(BOOL)state;
+- (void) configCheckButton:(CGRect)frame key:(NSString*)key state:(BOOL)state addsv:(BOOL)addsv;
 - (void) configActionBtn:(CGRect)frame key:(NSString*)key label:(NSString*)label target:(id)target action:(SEL)action;
 - (void) configTextField:(CGRect)frame key:(NSString*)key target:(id)target action:(SEL)action num:(BOOL)num place:(NSString*)place text:(NSString*)text addsv:(BOOL)addsv;
 - (void) configTextView:(CGRect)frame key:(NSString*)key text:(NSString*)text;
