@@ -18,7 +18,7 @@
 #define SQLDEBUG    0
 #define NONAME      0
 
-#define DEBUGLOG    0
+#define DEBUGLOG    1
 #define DEBUGWARN   1
 #define DEBUGERR    1
 #define RELEASE     1
